--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "js-yaml": "^4.1.0",
     "react-router-dom": "^6.27.0",
     "react-svg": "^16.1.34",
     "react-transition-group": "^4.4.5",
