--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -93,6 +93,9 @@ services:
       - LOG_LEVEL=INFO
       - HTTP_HOST=0.0.0.0
       - HTTP_PORT=8085
+      - UVICORN_HOST=0.0.0.0
+      - UVICORN_PORT=8085
+      - MCP_TRANSPORT=sse
     ports:
       - "8085:8085"
     depends_on:
@@ -102,6 +105,9 @@ services:
     networks:
       - sphere-network
   harvey:
+    build:
+      args:
+        - HARVEY_STATIC_DIR=/app/static
     image: aleexgf/harvey:main
     container_name: harvey
     env_file: .env
@@ -114,7 +120,8 @@ services:
       - AMINT_BASE_URL=http://a-mint:8000
       - ANALYSIS_BASE_URL=http://analysis-engine:3000
       - CACHE_BACKEND=memory
-      - MCP_TRANSPORT=stdio
+      - MCP_TRANSPORT=sse
+      - MCP_SERVER_URL=http://mcp-server:8085/sse
       # AÑADE ESTO:
       - HTTP_PROXY=http://proxy.int.local:3128
       - HTTPS_PROXY=http://proxy.int.local:3128
@@ -122,6 +129,7 @@ services:
     depends_on:
       - a-mint
       - analysis-engine
+      - mcp-server
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8086/health"]
       interval: 30s
