fix: update production docker compose

--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -46,6 +46,10 @@ services:
       - PORT=3000
       - CHOCO_API=http://choco-analysis-engine:8000
       - LOG_LEVEL=INFO
+      # AÑADE ESTO:
+      - HTTP_PROXY=http://proxy.int.local:3128
+      - HTTPS_PROXY=http://proxy.int.local:3128
+      - NO_PROXY=127.0.0.1,localhost,analysis-engine,mcp-server,analysis-engine
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
@@ -72,7 +76,7 @@ services:
       # AÑADE ESTO:
       - HTTP_PROXY=http://proxy.int.local:3128
       - HTTPS_PROXY=http://proxy.int.local:3128
-      - NO_PROXY=127.0.0.1,localhost,analysis-engine,mcp-server
+      - NO_PROXY=127.0.0.1,localhost,analysis-engine,mcp-server,analysis-engine
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -99,7 +103,7 @@ services:
       # AÑADE ESTO:
       - HTTP_PROXY=http://proxy.int.local:3128
       - HTTPS_PROXY=http://proxy.int.local:3128
-      - NO_PROXY=127.0.0.1,localhost,analysis-engine,a-mint,mcp-server
+      - NO_PROXY=127.0.0.1,localhost,analysis-engine,a-mint,mcp-server,analysis-engine
     ports:
       - "8085:8085"
     depends_on:
@@ -126,7 +130,7 @@ services:
       # AÑADE ESTO:
       - HTTP_PROXY=http://proxy.int.local:3128
       - HTTPS_PROXY=http://proxy.int.local:3128
-      - NO_PROXY=127.0.0.1,localhost,analysis-engine,a-mint,mcp-server
+      - NO_PROXY=127.0.0.1,localhost,analysis-engine,a-mint,mcp-server,analysis-engine
     depends_on:
       - a-mint
       - analysis-engine
