--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,3 +2,4 @@ VITE_API_URL=/api
 VITE_ASSETS_URL=/static
 VITE_SECRET_KEY=app_secret
 VITE_HARVEY_URL=/harvey-api
+VITE_SPHERE_URL=https://sphere.score.us.es
