--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
+    "minizinc": "^4.4.5",
     "mongo-seeding": "^4.0.1",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
