--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.2.0",
   "scripts": {
     "install": "cd frontend && npm install && cd ../api && npm install",
-    "dev": "npm run dev:api & npm run dev:vite",
+    "dev": "npm run dev:concurrent",
+    "dev:concurrent": "concurrently \"npm:dev:api\" \"npm:dev:vite\" -n API,FRONTEND -c green,blue --kill-others-on-fail",
+    "dev:concurrent:separate": "concurrently --raw \"npm:dev:api\" \"npm:dev:vite\" -n API,FRONTEND -c green,blue --kill-others-on-fail",
     "test": "npm run test:api",
     "build": "cd frontend && tsc -b && vite build",
     "lint": "eslint .",
